--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+VERSION 0.99.6
+------------------------
+   o Revised and modified some parts
+
 VERSION 0.99.0
 ------------------------
    o Package released
