--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+VERSION 0.99.11
+------------------------
+   o Revised and modified some parts
+
 VERSION 0.99.10
 ------------------------
    o Revised and modified some parts
