--- a/vignettes/scTensor.Rmd
+++ b/vignettes/scTensor.Rmd
@@ -302,11 +302,11 @@ cellCellSetting(sce, LRBase.Hsa.eg.db, labelGermMale, names(labelGermMale))
 
 After `cellCellSetting`, we can perform tensor decomposition by
 `cellCellDecomp`. Here the parameter `ranks` is specificed as dimension of
-core tensor. For example, c(3, 3, 15) means The data tensor is decomposed to
-3 ligand-patterns, 3 receptor-patterns, and 15 L-R-pairs-patterns.
+core tensor. For example, c(2, 3, 4) means The data tensor is decomposed to
+2 ligand-patterns, 3 receptor-patterns, and 4 L-R-pairs-patterns.
 
 ```{r cellCellDecomp, echo=TRUE}
-cellCellDecomp(sce, ranks=c(3,2,19))
+cellCellDecomp(sce, ranks=c(2,3,4))
 ```
 
 Although the user have to specify the rank to perform cellCellDecomp,
@@ -314,8 +314,7 @@ we implemented a simple rank estimation function based on the eigenvalues
 destribution of PCA in the matricised tensor in each mode.
 
 ```{r cellCellRank, echo=TRUE}
-rks <- cellCellRanks(sce)
-rks$selected
+cellCellRanks(sce)
 ```
 
 ### HTML Report : cellCellReport
