--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,28 +1,4 @@
-VERSION 0.99.12
-------------------------
-   o Revised and modified some parts
-
-VERSION 0.99.11
-------------------------
-   o Revised and modified some parts
-
-VERSION 0.99.10
-------------------------
-   o Revised and modified some parts
-
-VERSION 0.99.9
-------------------------
-   o Revised and modified some parts
-
-VERSION 0.99.8
-------------------------
-   o Revised and modified some parts
-
-VERSION 0.99.7
-------------------------
-   o Revised and modified some parts
-
-VERSION 0.99.6
+VERSION 0.99.6 to 0.99.13
 ------------------------
    o Revised and modified some parts
 
