--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,4 +1,12 @@
-VERSION 0.99.6 to 0.99.15
+VERSION 0.99.18
+------------------------
+   o Enrichment Analysis is added in cellCellReport
+
+VERSION 0.99.15
+------------------------
+   o Accepted
+
+VERSION 0.99.6 to 0.99.14
 ------------------------
    o Revised and modified some parts
 
