--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,13 @@
+VERSION 1.0.1
+------------------------
+   o Some bugs are fixed
+   o Three vignettes are added
+   o convertToNCBIGeneID function to ID conversion of input matrix
+
+VERSION 1.0.0
+------------------------
+   o Package release (Bioconductor 3.9)
+
 VERSION 0.99.22
 ------------------------
    o newCCSParams, getParam, setParam, and cellCellSimulate are added
