--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,9 @@
+VERSION 1.0.2
+------------------------
+   o upper is added in cellCellReport
+   o Table grid lines in {ligand,receptor}*.Rmd are added
+   o Some bugs are fixed
+
 VERSION 1.0.1
 ------------------------
    o Some bugs are fixed
