--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+VERSION 1.0.3
+------------------------
+   o Some bugs are fixed
+
 VERSION 1.0.2
 ------------------------
    o upper is added in cellCellReport
