--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,4 +1,8 @@
-VERSION 1.0.3
+VERSION 1.0.6
+------------------------
+   o Dependency of biomaRt is removed and AnnotationHub is used instead
+
+VERSION 1.0.3 - 1.0.5
 ------------------------
    o Some bugs are fixed
 
