--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+VERSION 1.0.7
+------------------------
+   o Some bugs are fixed
+
 VERSION 1.0.6
 ------------------------
    o Dependency of biomaRt is removed and AnnotationHub is used instead
