--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,8 +1,4 @@
-VERSION 1.0.8
-------------------------
-   o Some bugs are fixed
-
-VERSION 1.0.7
+VERSION 1.0.7 - 1.0.9
 ------------------------
    o Some bugs are fixed
 
