--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,10 +1,16 @@
+VERSION 1.0.10
+------------------------
+   o Tensor decomposition model is changed from non-negative Tucker3 to non-negative Tucker2
+   o assayNames option is added to specify which normalized assay data user want to use
+   o ftt option is removed
+
 VERSION 1.0.7 - 1.0.9
 ------------------------
    o Some bugs are fixed
 
 VERSION 1.0.6
 ------------------------
-   o Dependency of biomaRt is removed and AnnotationHub is used instead
+   o Dependency against biomaRt is replaced by AnnotationHub
 
 VERSION 1.0.3 - 1.0.5
 ------------------------
