--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,6 @@
+VERSION 1.0.13
+   o Gene-gene network based on visNetwork is introduced
+
 VERSION 1.0.11 - 1.0.12
 ------------------------
    o Some bugs are fixed
